--- a/index.html
+++ b/index.html
@@ -127,11 +127,6 @@
       </section>
     </div>
   </header>
-
-
-
-
-
   <main>
     <!-- hero-section -->
     <section>
@@ -201,32 +196,41 @@
           </h2>
         </div>
 
-        <div class="overflow-hidden dir-ltr whitespace-nowrap">
-          <div class="inline-block dir-ltr space-x-16 animate-logo-slide">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/bejocam black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/bumoona black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/home louk black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/nightway black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/Paytabom black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/pizo black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/sciepole black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/spacrea black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/tobama black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/viravall black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/weura black.svg" alt="">
-          </div>
-          <div class="inline-block dir-ltr space-x-16 animate-logo-slide">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/bejocam black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/bumoona black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/home louk black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/nightway black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/Paytabom black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/pizo black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/sciepole black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/spacrea black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/tobama black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/viravall black.svg" alt="">
-            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/weura black.svg" alt="">
+        <div class="swiper logos-swiper">
+          <div class="logo-swiper-wrapper swiper-wrapper">
+            <div class="swiper-slide">
+              <img class="h-[70px]" src="./src/assets/img/Collaboration/bejocam black.svg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img class="h-[70px]" src="./src/assets/img/Collaboration/bumoona black.svg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img class="h-[70px]" src="./src/assets/img/Collaboration/home louk black.svg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img class="h-[70px]" src="./src/assets/img/Collaboration/nightway black.svg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img class="h-[70px]" src="./src/assets/img/Collaboration/Paytabom black.svg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img class="h-[70px]" src="./src/assets/img/Collaboration/pizo black.svg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img class="h-[70px]" src="./src/assets/img/Collaboration/sciepole black.svg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img class="h-[70px]" src="./src/assets/img/Collaboration/spacrea black.svg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img class="h-[70px]" src="./src/assets/img/Collaboration/tobama black.svg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img class="h-[70px]" src="./src/assets/img/Collaboration/viravall black.svg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img class="h-[70px]" src="./src/assets/img/Collaboration/weura black.svg" alt="">
+            </div>
           </div>
         </div>
       </div>
@@ -443,28 +447,34 @@
     <!-- resume -->
     <section>
       <div class="container mb-24">
-        <h2 class="font-bold text-3xl text-center mb-6">
+        <h2 class="font-bold text-3xl text-center mb-[200px]">
           <span class="font-shahrzad text-main-Purple text-4xl pl-2">؛</span>
           رزومه کاری
           <span class="text-main-Purple">اکسینس</span>
         </h2>
 
-        <div class="relative bg-smoky-white border-1 border-dark-smoky rounded-tl-3xl rounded-tr-3xl p-6">
-          <div class="">
-            <img class="w-[60px]" src="./src/assets/img/resume/resume-section-img.png" alt="">
+
+
+
+        <div class="w-full max-h-[240px] md:max-h-fit flex bg-smoky-white border-1 border-dark-smoky rounded-tl-3xl rounded-tr-3xl ">
+          <div class="relative w-[55%] bg-main-Purple">
+            <div class="absolute -top-[40px] sm:-top-[60px] md:-top-[80px] lg:-top-[100px] pt-[25%]  rounded-tl-4xl rounded-tr-4xl bg-main-Purple flex items-center justify-center w-full h-full">
+              <img class="w-[450px] lg:w-[500px]" src="./src/assets/img/resume/resume-section-img.png" alt="">
+            </div>
           </div>
 
-          <div class="bg-main">
-            <div class="flex items-center gap-x-2 mb-3">
-              <img src="./src/assets/img/icons/dot.png" alt="dot">
-              <h3 class="font-bold text-sm">درباره اکسینس</h3>
+
+          <div class="w-[45%] py-4 pl-4 pr-6">
+            <div class="flex items-center gap-x-1 lg:gap-x-2 mb-3">
+              <img class="w-[25px]" src="./src/assets/img/icons/dot.png" alt="dot">
+              <h3 class="font-bold lg:text-2xl text-sm">درباره اکسینس</h3>
             </div>
             <div>
-              <p class="text-sm font-Medium inline-block text-paragraph mb-8">لورم ایپسوم متن ساختگی با تولید سادگی
+              <p class="text-[10px] lg:text-base font-normal inline-block text-paragraph mb-2 lg:mb-8">لورم ایپسوم متن ساختگی با تولید سادگی
                 نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است.لورم
                 ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است.</p>
-              <div class="text-center">
-                <button class="bg-main-Purple text-sec-smoky-white px-8 py-2 rounded-4xl">مشاهده رزومه اکسینس</button>
+              <div class="text-right">
+                <button class="bg-main-Purple text-sec-smoky-white text-[10px] lg:text-base font-semibold px-2 py-1 lg:px-8 lg:py-2 rounded-4xl">مشاهده رزومه اکسینس</button>
               </div>
             </div>
           </div>
@@ -480,60 +490,71 @@
             آخرین مقالات
             <span class="text-main-Purple">اکسینس</span>
           </h2>
-          <!-- arrow -->
-          <div class="lg:hidden flex items-center space-x-2">
-            <button id="slide-right-arrow" class="bg-main-Purple w-[40px] h-[40px] rounded-full flex items-center justify-center">
-              <img class="w-2" src="./src/assets/img/icons/arrow/right-arrow.png" alt="">
-            </button>
-            <button id="slide-left-arrow" class="bg-main-Purple w-[40px] h-[40px] rounded-full flex items-center justify-center">
-              <img class="w-2" src="./src/assets/img/icons/arrow/left-arrow.png" alt="">
-            </button>
-          </div>
-          <button class="hidden lg:inline-block font-bold text-md bg-main-Purple text-smoky-white px-7 py-4 rounded-3xl">مشاهده بیشتر</button>
+          <button
+            class="hidden lg:inline-block font-bold text-md bg-main-Purple text-smoky-white px-7 py-4 rounded-3xl">مشاهده
+            بیشتر</button>
         </div>
 
 
         <!-- ******* -->
-        <div class="w-full">
-          <div id="slider" class="grid grid-flow-col grid-cols-2 gap-x-2 transition-transform duration-500 ease-in-out">
-            <div class="bg-smoky-white border-1 border-dark-smoky rounded-3xl">
+        <div class="swiper cards-swiper">
+          <ul class="swiper-wrapper ">
+            <li class="swiper-slide col-span-1 bg-smoky-white border-1 border-dark-smoky rounded-3xl">
               <div>
-                <img class="rounded-tl-3xl rounded-tr-3xl" src="./src/assets/img/articles/article-img-1.png" alt="">
+                <img class="w-full object-fill rounded-tl-3xl rounded-tr-3xl"
+                  src="./src/assets/img/articles/article-img-1.png" alt="">
               </div>
               <div class="px-4 pt-4 pb-4 space-y-3 text-center">
-                  <h3 class="text-[14px] font-bold">مقاله شماره یک</h3>
-                  <button class="text-[12px] bg-main-Purple text-white w-full font-bold py-1 rounded-3xl">بیشتر بخوانید</button>
+                <h3 class="text-[14px] font-bold">مقاله شماره یک</h3>
+                <button class="text-[12px] bg-main-Purple text-white w-full font-bold py-1 rounded-3xl">بیشتر
+                  بخوانید</button>
               </div>
-            </div>
-            <div class="bg-smoky-white border-1 border-dark-smoky rounded-3xl">
+            </li>
+            <li class="swiper-slide col-span-1 bg-smoky-white border-1 border-dark-smoky rounded-3xl">
               <div>
-                <img class="rounded-tl-3xl rounded-tr-3xl" src="./src/assets/img/articles/article-img-1.png" alt="">
+                <img class="w-full object-cover rounded-tl-3xl rounded-tr-3xl"
+                  src="./src/assets/img/articles/article-img-1.png" alt="">
               </div>
               <div class="px-4 pt-4 pb-4 space-y-3 text-center">
-                  <h3 class="text-[14px] font-bold">مقاله شماره یک</h3>
-                  <button class="text-[12px] bg-main-Purple text-white w-full font-bold py-1 rounded-3xl">بیشتر بخوانید</button>
+                <h3 class="text-[14px] font-bold">مقاله شماره دو</h3>
+                <button class="text-[12px] bg-main-Purple text-white w-full font-bold py-1 rounded-3xl">بیشتر
+                  بخوانید</button>
               </div>
-            </div>
-            <div class="bg-smoky-white border-1 border-dark-smoky rounded-3xl">
+            </li>
+            <li class="swiper-slide col-span-1 bg-smoky-white border-1 border-dark-smoky rounded-3xl">
               <div>
-                <img class="rounded-tl-3xl rounded-tr-3xl" src="./src/assets/img/articles/article-img-1.png" alt="">
+                <img class="w-full object-fill rounded-tl-3xl rounded-tr-3xl"
+                  src="./src/assets/img/articles/article-img-1.png" alt="">
               </div>
               <div class="px-4 pt-4 pb-4 space-y-3 text-center">
-                  <h3 class="text-[14px] font-bold">مقاله شماره یک</h3>
-                  <button class="text-[12px] bg-main-Purple text-white w-full font-bold py-1 rounded-3xl">بیشتر بخوانید</button>
+                <h3 class="text-[14px] font-bold">مقاله شماره سه</h3>
+                <button class="text-[12px] bg-main-Purple text-white w-full font-bold py-1 rounded-3xl">بیشتر
+                  بخوانید</button>
               </div>
-            </div>
-            <div class="bg-smoky-white border-1 border-dark-smoky rounded-3xl">
+            </li>
+            <li class="swiper-slide col-span-1 bg-smoky-white border-1 border-dark-smoky rounded-3xl">
               <div>
-                <img class="rounded-tl-3xl rounded-tr-3xl" src="./src/assets/img/articles/article-img-1.png" alt="">
+                <img class="w-full object-cover rounded-tl-3xl rounded-tr-3xl"
+                  src="./src/assets/img/articles/article-img-1.png" alt="">
               </div>
               <div class="px-4 pt-4 pb-4 space-y-3 text-center">
-                  <h3 class="text-[14px] font-bold">مقاله شماره یک</h3>
-                  <button class="text-[12px] bg-main-Purple text-white w-full font-bold py-1 rounded-3xl">بیشتر بخوانید</button>
+                <h3 class="text-[14px] font-bold">مقاله شماره چهار</h3>
+                <button class="text-[12px] bg-main-Purple text-white w-full font-bold py-1 rounded-3xl">بیشتر
+                  بخوانید</button>
               </div>
-            </div>
-          </div>
-          </div>
+            </li>
+            <li class="swiper-slide col-span-1 bg-smoky-white border-1 border-dark-smoky rounded-3xl">
+              <div>
+                <img class="w-full object-fill rounded-tl-3xl rounded-tr-3xl"
+                  src="./src/assets/img/articles/article-img-1.png" alt="">
+              </div>
+              <div class="px-4 pt-4 pb-4 space-y-3 text-center">
+                <h3 class="text-[14px] font-bold">مقاله شماره پنج</h3>
+                <button class="text-[12px] bg-main-Purple text-white w-full font-bold py-1 rounded-3xl">بیشتر
+                  بخوانید</button>
+              </div>
+            </li>
+          </ul>
         </div>
         <!-- ******* -->
       </div>
@@ -542,102 +563,43 @@
 
   <footer>
     <div class="container">
-      <div class="bg-pastel-purple rounded-tr-4xl rounded-tl-4xl px-10 pt-16">
+      <div class="bg-pastel-purple rounded-tr-4xl rounded-tl-4xl px-10 pt-6 lg:pt-14">
         <!-- header -->
-        <section class="flex flex-col lg:flex-row items-center lg:items-center lg:justify-between lg:mb-20 mb-6">
+        <section class="flex items-center lg:mb-20 mb-6">
           <div class="mb-8 lg:mb-0">
             <a href="#">
-              <img class="w-[160px] lg:w-[180px]" src="./src/assets/img/logo/EXINESS.png" alt="">
+              <img class="w-[100px] md:w-[160px] lg:w-[180px]" src="./src/assets/img/logo/EXINESS.png" alt="">
             </a>
           </div>
-          <p
-            class="lg:hidden py-1 w-full text-center font-semibold rounded-2xl text-base text-white bg-main-Purple mb-6">
-            لینک ها</p>
+
           <nav>
-            <ul
-              class="flex flex-col lg:flex-row text-center space-y-2 lg:space-y-0 lg:text-right lg:items-center lg:space-x-8 mb-6 lg:mb-0">
-              <li class="font-semibold text-base lg:text-lg">
-                <a href="#">صفحه اصلی</a>
+            <ul class="flex items-center gap-x-1">
+              <li>
+                <a class="text-[8px]" href="#">صفحه اصلی</a>
               </li>
-              <li class="font-semibold text-base lg:text-lg">
-                <a href="#">خدمات</a>
+              <li>
+                <a class="text-[8px]" href="#">خدمات</a>
               </li>
-              <li class="font-semibold text-base lg:text-lg">
-                <a href="#">نمونه کار</a>
+              <li>
+                <a class="text-[8px]" href="#">نمونه کار</a>
               </li>
-              <li class="font-semibold text-base lg:text-lg">
-                <a href="#">وبلاگ</a>
+              <li>
+                <a class="text-[8px]" href="#">وبلاگ</a>
               </li>
-              <li class="font-semibold text-base lg:text-lg">
-                <a href="#">درباره ما</a>
+              <li>
+                <a class="text-[8px]" href="#">درباره ما</a>
               </li>
-              <li class="font-semibold text-md lg:text-lg">
-                <a href="#">تماس با ما</a>
+              <li>
+                <a class="text-[8px]" href="#">تماس با ما</a>
               </li>
             </ul>
           </nav>
-          <p
-            class="lg:hidden font-semibold w-full text-center rounded-2xl py-1 text-base text-white bg-main-Purple mb-6">
-            ارتباط با ما</p>
-          <div class="hidden lg:block space-x-4">
-            <a class="inline-block" href="#">
-              <img src="./src/assets/img/logo/social/Social icon.png" alt="">
-            </a>
-            <a class="inline-block" href="#">
-              <img src="./src/assets/img/logo/social/Social icon.png" alt="">
-            </a>
-            <a class="inline-block" href="#">
-              <img src="./src/assets/img/logo/social/Social icon.png" alt="">
-            </a>
-          </div>
         </section>
         <!-- info and form section -->
         <section class="pb-14">
           <div class="mb-6 lg:mb-8">
             <span class="hidden lg:inline-block bg-main-Purple text-white p-1 font-semibold px-3 py-1 rounded-xl">ارتباط
               با ما :</span>
-          </div>
-
-          <!-- mobile -->
-          <div class="lg:hidden">
-            <div class="h-1/2 mb-4 flex justify-between">
-              <p class="w-1/2 font-normal text-sm">آدرس : البرز، کرج، گلشهر، بلوار مصطفی خمینی، مجتمع کسری، واحد 25 ،
-                پلاک7612</p>
-              <p class="font-normal text-sm">تماس : 09365008696</p>
-            </div>
-
-            <div class="h-1/2 flex items-center justify-between">
-              <p class="w-2/3 font-normal text-sm">ایمیل : infoexiness@gmail.com</p>
-              <div class="flex items-center space-x-2">
-                <a class="w-[18px] inline-block" href="#">
-                  <img src="./src/assets/img/logo/social/Social icon.png" alt="">
-                </a>
-                <a class="w-[18px] inline-block" href="#">
-                  <img src="./src/assets/img/logo/social/Social icon.png" alt="">
-                </a>
-                <a class="w-[18px] inline-block" href="#">
-                  <img src="./src/assets/img/logo/social/Social icon.png" alt="">
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- desktop -->
-          <div class="hidden lg:block">
-            <div class="grid grid-cols-2">
-              <div class="space-y-5">
-                <p class="w-2/3 font-normal text-lg">ایمیل : infoexiness@gmail.com</p>
-                <p class="font-normal text-lg">تماس : 09365008696</p>
-                <p class="w-1/2 font-normal text-lg">آدرس : البرز، کرج، گلشهر، بلوار مصطفی خمینی، مجتمع کسری، واحد 25 ،
-                  پلاک7612</p>
-              </div>
-              <!-- form -->
-              <div>
-                <form action="#">
-                  <input type="text">
-                  
-                </form>
-              </div>
-            </div>
           </div>
         </section>
         <!-- exiness -->
@@ -653,7 +615,10 @@
         </section>
       </div>
   </footer>
+
   <script type="module" src="/src/main.js"></script>
+  <script type="module" src="./src/script/util/slider/articlesSliderSwiperConfig.js"></script>
+  <script type="module" src="./src/script/util/slider/logosSliderConfig.js"></script>
 </body>
 
 </html>
