--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
   <main>
     <!-- hero-section -->
     <section>
-      <div class="container py-14 lg:grid lg:grid-cols-2 lg:gap-x-12">
+      <div class="container py-17 lg:grid lg:grid-cols-2 lg:gap-x-12">
         <!-- title -->
         <div class="w-full flex flex-col">
           <!-- main title -->
           <div class="order-1 mb-3 lg:mb-6 xl:mb-10">
-            <h2 class=" text-[22px] md:text-[30px] lg:text-[25px] font-medium text-center">
-              <span class=" font-shahrzad text-main-Purple text-5xl">؛</span>راهکارهای
+            <h2 class="flex items-center justify-center gap-x-1 text-[22px] md:text-[30px] lg:text-[25px] font-medium text-center">
+              <span class=" font-shahrzad text-main-Purple text-4xl lg:text-5xl">؛</span>راهکارهای
               <span class="text-main-Purple">دیجیتال</span> برای
               <span class="text-main-Purple">رشد</span>
               کسب‌وکار شما در
@@ -176,22 +176,22 @@
         <!-- img -->
         <div class="space-y-4 hidden lg:block">
           <div class="flex items-center gap-x-4 w-full pl-4">
-            <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-p.png" alt="Rectangle">
             <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-light-p.png" alt="Rectangle">
+            <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-p.png" alt="Rectangle">
           </div>
           <div class="flex items-center gap-x-4 w-full pl-4">
-            <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-light-p.png" alt="Rectangle">
             <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-p.png" alt="Rectangle">
+            <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-light-p.png" alt="Rectangle">
           </div>
         </div>
       </div>
     </section>
     <!-- Collaborate. -->
     <section>
-      <div class="container pt-4 lg:pt-12 mb-24">
-        <div class="text-center mb-7">
-          <h2 class="font-bold text-lg lg:text-2xl">
-            <span class=" font-shahrzad text-main-Purple text-5xl">؛</span>
+      <div class="container pt-4 lg:pt-12 mb-38">
+        <div class="text-center mb-16">
+          <h2 class="font-bold text-lg lg:text-3xl flex items-center justify-center gap-x-1">
+            <span class=" font-shahrzad text-main-Purple text-4xl lg:text-5xl">؛</span>
             برند هایی که با ما همکاری کردند
           </h2>
         </div>
@@ -238,8 +238,8 @@
     <!-- about exiness -->
     <section>
       <div class="container pb-12 mb-24">
-        <h2 class="font-bold text-3xl text-center mb-14">
-          <span class="font-shahrzad text-main-Purple text-4xl pl-2">؛</span>
+        <h2 class="font-bold text-3xl text-center mb-14 flex items-center justify-center gap-x-1">
+          <span class="font-shahrzad text-main-Purple text-4xl lg:text-5xl">؛</span>
           درباره
           <span class="text-main-Purple">اکسینس</span>
         </h2>
@@ -272,8 +272,9 @@
           </div>
 
           <div class="lg:pl-4 lg:pt-8 flex flex-col">
-            <h2 class="font-bold text-2xl mb-4 sm:mb-6 md:mb-7 lg:mb-8 text-center lg:text-right sm:text-3xl ">
-              <span class="font-shahrzad text-main-Purple text-4xl">؛</span>
+            <h2
+              class="flex items-center justify-start gap-x-1 font-bold text-2xl mb-4 sm:mb-6 md:mb-7 lg:mb-8 text-center lg:text-right sm:text-[24px]">
+              <span class="font-shahrzad text-main-Purple text-5xl">؛</span>
               تجربه و نوآوری در کنار هم
             </h2>
             <p class="font-medium text-md sm:text-xl mb-6 md:mb-8 lg:mb-14 text-center lg:text-right">
@@ -281,8 +282,8 @@
               متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.
             </p>
 
-            <div class="lg:flex items-center text-center space-x-16 mb-9 hidden ">
-              <div class="flex flex-col items-center ">
+            <div class="lg:flex items-center justify-center text-center space-x-16 mb-9 hidden ">
+              <div class="flex flex-col items-center">
                 <h2 class="font-semibold text-4xl lg:flex lg:items-center lg:gap-x-2">
                   <span class="text-main-Purple">+</span>
                   100
@@ -312,9 +313,9 @@
     </section>
     <!-- EXINESS lines -->
     <section>
-      <div class="container mb-10 lg:mb-18">
-        <h2 class="font-bold text-3xl text-center mb-14">
-          <span class="font-shahrzad text-main-Purple text-4xl pl-2">؛</span>
+      <div class="container mb-10 lg:mb-28">
+        <h2 class="font-bold text-3xl text-center mb-20 flex items-center justify-center gap-x-1">
+          <span class="font-shahrzad text-main-Purple text-4xl lg:text-5xl">؛</span>
           لاین های
           <span class="text-main-Purple">اکسینس</span>
         </h2>
@@ -322,9 +323,10 @@
         <div class="grid grid-cols-1 gap-y-6 md:grid-cols-2 md:gap-x-6">
           <div class="bg-main-Purple rounded-3xl px-8 py-10 md:px-10 md:py-14">
             <div class="flex items-center space-x-4 pb-6">
-              <img class="w-[50px] bg-white rounded-xl" src="./src/assets/img/logo/exiness lines/exin.png"
-                alt="exin brand logo">
-              <h2 class="font-bold text-2xl text-smoky-white">لاینEXIN</h2>
+              <div class="w-[60px] h-[70px] flex items-center justify-center rounded-xl bg-white">
+                <img class="w-[50px] h-[50px]" src="./src/assets/img/logo/exiness lines/eness.png" alt="eness brand logo">
+              </div>
+              <h2 class="font-bold text-2xl text-smoky-white">لاینENESS</h2>
             </div>
             <p class="text-sec-smoky-white font-normal text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم
               از
@@ -336,9 +338,11 @@
 
           <div class="bg-main-Purple rounded-3xl px-8 py-10 md:px-10 md:py-14">
             <div class="flex items-center space-x-4 pb-6">
-              <img class="w-[50px] rounded-xl" src="./src/assets/img/logo/exiness lines/eness.png"
-                alt="eness brand logo">
-              <h2 class="font-bold text-2xl text-smoky-white">لاینENESS</h2>
+              <div class="w-[60px] h-[70px] flex items-center justify-center rounded-xl bg-white">
+                <img class="w-[60px] h-[60px] object-contain"
+                src="./src/assets/img/logo/exiness lines/exin.png" alt="exin brand logo">
+              </div>
+              <h2 class="font-bold text-2xl text-smoky-white">لاینEXIN</h2>
             </div>
             <p class="text-sec-smoky-white font-normal text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم
               از
@@ -355,8 +359,8 @@
       <div class="container mb-24">
         <div class="grid grid-cols-2 grid-rows-5 gap-3">
           <div class="col-span-2 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky py-5 md:py-12 lg:py-14">
-            <h2 class="font-bold text-xl md:text-2xl text-center pb-2 md:pb-4">
-              <span class="font-shahrzad text-main-Purple text-4xl pl-1">؛</span>
+            <h2 class="flex items-center justify-center font-bold text-xl md:text-2xl lg:text-3xl text-center pb-2 md:pb-4">
+              <span class="font-shahrzad text-main-Purple text-4xl lg:text-5xl">؛</span>
               خدمات <span class="text-main-Purple">مشاوره ای</span> اکسینس
             </h2>
             <p class="text-center text-paragraph font-medium text-sm md:text-lg pb-5">تیم حرفه ای ما طیف گسترده ای از
@@ -375,7 +379,7 @@
             class="cols-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
             <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
               <img src="./src/assets/img/icons/dot.png" alt="dot">
-              <h3>مشاوره بازاریابی</h3>
+              <h3 class="text-base md:text-xl lg:text-2xl">مشاوره بازاریابی</h3>
             </div>
             <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
               صنعت چاپ، و با
@@ -385,7 +389,7 @@
             class="cols-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
             <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
               <img src="./src/assets/img/icons/dot.png" alt="dot">
-              <h3>مشاوره مدیریت</h3>
+              <h3 class="text-base md:text-xl lg:text-2xl">مشاوره مدیریت</h3>
             </div>
             <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
               صنعت چاپ، و با
@@ -395,7 +399,7 @@
             class="col-span-2 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
             <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
               <img src="./src/assets/img/icons/dot.png" alt="dot">
-              <h3>مشاوره فناوری اطلاعات</h3>
+              <h3 class="text-base md:text-xl lg:text-2xl">مشاوره فناوری اطلاعات</h3>
             </div>
             <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
               صنعت چاپ، و با
@@ -405,7 +409,7 @@
             class="col-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
             <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
               <img src="./src/assets/img/icons/dot.png" alt="dot">
-              <h3>مشاوره منابع انسانی</h3>
+              <h3 class="text-base md:text-xl lg:text-2xl">مشاوره منابع انسانی</h3>
             </div>
             <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
               صنعت چاپ، و با
@@ -415,7 +419,7 @@
             class="col-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
             <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
               <img src="./src/assets/img/icons/dot.png" alt="dot">
-              <h3>مشاوره مالی </h3>
+              <h3 class="text-base md:text-xl lg:text-2xl">مشاوره مالی </h3>
             </div>
             <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
               صنعت چاپ، و با
@@ -425,7 +429,7 @@
             class="col-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
             <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
               <img src="./src/assets/img/icons/dot.png" alt="dot">
-              <h3>مشاوره سرمایه گذاری</h3>
+              <h3 class="text-base md:text-xl lg:text-2xl">مشاوره سرمایه گذاری</h3>
             </div>
             <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
               صنعت چاپ، و با
@@ -435,7 +439,7 @@
             class="col-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
             <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
               <img src="./src/assets/img/icons/dot.png" alt="dot">
-              <h3>مشاوره ثبت اختراع </h3>
+              <h3 class="text-base md:text-xl lg:text-2xl">مشاوره ثبت اختراع </h3>
             </div>
             <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
               صنعت چاپ، و با
@@ -447,8 +451,8 @@
     <!-- resume -->
     <section>
       <div class="container mb-24">
-        <h2 class="font-bold text-3xl text-center mb-[200px]">
-          <span class="font-shahrzad text-main-Purple text-4xl pl-2">؛</span>
+        <h2 class="flex items-center justify-center gap-x-1 font-bold text-3xl text-center mb-[120px] md:mb-[200px]">
+          <span class="font-shahrzad text-main-Purple text-4xl lg:text-5xl">؛</span>
           رزومه کاری
           <span class="text-main-Purple">اکسینس</span>
         </h2>
@@ -456,25 +460,30 @@
 
 
 
-        <div class="w-full max-h-[240px] md:max-h-fit flex bg-smoky-white border-1 border-dark-smoky rounded-tl-3xl rounded-tr-3xl ">
+        <div
+          class="w-full max-h-[240px] md:max-h-fit flex bg-smoky-white border-1 border-dark-smoky rounded-tl-3xl rounded-tr-3xl ">
           <div class="relative w-[55%] bg-main-Purple">
-            <div class="absolute -top-[40px] sm:-top-[60px] md:-top-[80px] lg:-top-[100px] pt-[25%]  rounded-tl-4xl rounded-tr-4xl bg-main-Purple flex items-center justify-center w-full h-full">
+            <div
+              class="absolute -top-[40px] sm:-top-[60px] md:-top-[80px] lg:-top-[100px] pt-[25%]  rounded-tl-4xl rounded-tr-4xl bg-main-Purple flex items-center justify-center w-full h-full">
               <img class="w-[450px] lg:w-[500px]" src="./src/assets/img/resume/resume-section-img.png" alt="">
             </div>
           </div>
 
 
-          <div class="w-[45%] py-4 pl-4 pr-6">
+          <div class="w-[45%] py-10 pl-4 pr-2 md:pr-6">
             <div class="flex items-center gap-x-1 lg:gap-x-2 mb-3">
               <img class="w-[25px]" src="./src/assets/img/icons/dot.png" alt="dot">
-              <h3 class="font-bold lg:text-2xl text-sm">درباره اکسینس</h3>
+              <h3 class="font-bold lg:text-2xl text-base">درباره اکسینس</h3>
             </div>
             <div>
-              <p class="text-[10px] lg:text-base font-normal inline-block text-paragraph mb-2 lg:mb-8">لورم ایپسوم متن ساختگی با تولید سادگی
+              <p class="text-[11px] lg:text-[14px] lg:text-base font-normal inline-block text-paragraph mb-2 lg:mb-8">لورم ایپسوم متن
+                ساختگی با تولید سادگی
                 نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است.لورم
                 ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است.</p>
               <div class="text-right">
-                <button class="bg-main-Purple text-sec-smoky-white text-[10px] lg:text-base font-semibold px-2 py-1 lg:px-8 lg:py-2 rounded-4xl">مشاهده رزومه اکسینس</button>
+                <button
+                  class="bg-main-Purple text-sec-smoky-white text-[10px] lg:text-base font-semibold px-2 py-1 lg:px-8 lg:py-2 rounded-4xl">مشاهده
+                  رزومه اکسینس</button>
               </div>
             </div>
           </div>
@@ -485,8 +494,8 @@
     <section>
       <div class="container mb-24">
         <div class="flex items-center justify-between mb-10">
-          <h2 class="font-bold text-xl lg:text-3xl">
-            <span class="font-shahrzad text-main-Purple text-4xl pl-2">؛</span>
+          <h2 class="flex items-center justify-center gap-x-1 font-bold text-xl lg:text-3xl">
+            <span class="font-shahrzad text-main-Purple text-4xl lg:text-5xl">؛</span>
             آخرین مقالات
             <span class="text-main-Purple">اکسینس</span>
           </h2>
