--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sign up</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="../../style/style.css" />
   </head>
-  <body>
-    <h1>hello world</h1>
-  </body>
+  <body></body>
 </html>
